--- a/index.html
+++ b/index.html
@@ -6,16 +6,118 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>WOODS BY JORDYN</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link href="styles/index.css" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
 </head>
 
-<body>
-	<h1>Howdy FED2324</h1>
+<body> 
+	<header>
+		<form>
+			<input type="search" placeholder="search">
+			<button type="submit">search</button>
+		</form>
+
+		<nav>
+			<ul>
+				<li><a href="shop.html">SHOP</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="lookbook.html">LOOKBOOK</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<section>
+			<button><img src="" alt="go back"></button>
+			<button><img src="" alt="go forward"></button>
+			<button><img src="" alt="go down"></button>
+		
+			<img src="images/redbeach.png" alt="testen">
+			<img src="images/bucketheat.png" alt="testen">
+			<img src="images/purplebeach.png" alt="testen">
+		
+			<a href="shop.html">SHOP ALL</a>
+		</section>
+		
+		<section>
+			<img src="images/orangedress.png" alt="testen">
+			<h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+			<button type="button">CHOOSE OPTION</button>
+		</section>
+
+		<section>
+			<img src="images/orangedressup.png" alt="testen">
+			<h3>SOLAR SHORT SLEEVE DRESS</h3>
+			<p>123,95</p>
+			<button type="button">CHOOSE OPTION</button>
+		</section>
+
+		<section>
+			<img src="images/reddress.png" alt="testen">
+			<h3>SOLAR SHORT SLEEVE DRESS</h3>
+			<p>123,95</p>
+			<button type="button">CHOOSE OPTION</button>
+		</section>
+
+		<section>
+			<img src="images/reddressup.png" alt="testen">
+			<h3>SOLAR SHORT SLEEVE DRESS</h3>
+			<p>123,95</p>
+			<button type="button">CHOOSE OPTION</button>
+		</section>
+
+		<section>
+			<video src="images/Video.mp4" alt="promotie video"></video>
+			<img src="images/logo.png" alt="logo:WOODS BY JORDYN">
+			<p>Woods was made to empower and built to make you feel like a masterpiece in the skin that you’re in. Every collection is designed for every body, and curated to perfection. We exist with one mission: to elevate, express, and exude confidence and individuality by providing attainable luxury garments. Through positive empowerment and body celebration, we stand as an inspiring and artistic community striving to look snatched, feel good, and embody that DFE ...Divine Feminine Energy.</p>
+		</section>
+	</main>
+
+	<footer>
+		<section>
+			<h3>OUR STORY</h3>
+			<ul>
+				<li>About</li>
+				<li>STORY</li>
+				<li>CONTACT</li>
+				<li>SIZE CHART</li>
+			</ul>
+		</section>
+		
+		<section>
+			<h3>SUPPORT</h3>
+			<ul>
+				<li>SHIPPING</li>
+				<li>PRIVACY POLICY</li>
+				<li>RETURN POLICY</li>
+				<li>TERMS OF SERVICE</li>
+				<li>ACCESSIBILITY</li>
+				<li>DO NOT SELL MY PERSONAL INFORMATION</li>
+			</ul>
+		</section>
+
+		<section>
+			<h3>OUR MISSION</h3>
+			<p>Our mission is to create an environment that encourages Individuality, Self Confidence, Inclusivity, with an unapologetic behavior</p>
+		</section>
+
+		<h2>2023, WOODS BY JORDYN</h2>
+	
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
 	
 </html>
+
