--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
 
 <body> 
 	<header>
-		<form>
-			<input type="search" placeholder="search">
-			<button type="submit">search</button>
-		</form>
-
 		<nav>
 			<ul>
 				<li><a href="shop.html">SHOP</a></li>
@@ -35,6 +30,11 @@
 				<li><a href="lookbook.html">LOOKBOOK</a></li>
 			</ul>
 		</nav>
+		<img src="./images/logo.png" alt="Woods">
+		<form>
+			<input type="search" placeholder="search">
+			<button type="submit">search</button>
+		</form>
 	</header>
 
 	<main>
@@ -43,7 +43,6 @@
 			<button><img src="" alt="go forward"></button>
 			<button><img src="" alt="go down"></button>
 		
-			<img src="images/redbeach.png" alt="testen">
 			<img src="images/bucketheat.png" alt="testen">
 			<img src="images/purplebeach.png" alt="testen">
 		
