--- a/shop.html
+++ b/shop.html
@@ -25,23 +25,19 @@
 
 <body> 
 	<header>
-		<h1>WOODS</h1>
-		<p>BY JORDYN</p>
-
+		<nav>
+			<ul>
+				<li><a href="shop.html">SHOP</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="lookbook.html">LOOKBOOK</a></li>
+			</ul>
+		</nav>
+		<img src="./images/logo.png" alt="Woods">
 		<form>
 			<input type="search" placeholder="search">
 			<button type="submit">search</button>
-			</form>
-
-			<nav>
-				<ul>
-					<li><a href="shop.html">SHOP</a></li>
-					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="lookbook.html">LOOKBOOK</a></li>
-				</ul>
-			</nav>
+		</form>
 	</header>
-
 
 <main>
     <ul>
