--- a/shop.html
+++ b/shop.html
@@ -11,9 +11,6 @@
 	<link href="styles/style.css" rel="stylesheet">
 	<link href="styles/shop.css" rel="stylesheet">
 
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
@@ -44,38 +41,44 @@
 
         <li>
             <img src="images/reddress.png" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
 
 
         <li>
-            <img src="images/orangedress.png" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <img src="images/reddress.png" alt="testen">
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
 
         <li>
             <img src="images/colordress.jpeg" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
 
         <li>
             <img src="images/bucketheat.png" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
                 
         <li>
             <img src="images/blackdress.jpeg" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
 
         <li>
             <img src="images/gothicdressup.jpeg" alt="testen">
-            <h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
         </li>
     </ul>
