--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<link href="styles/index.css" rel="stylesheet">
 
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
 </head>
 
 <body> 
@@ -30,7 +30,11 @@
 				<li><a href="lookbook.html">LOOKBOOK</a></li>
 			</ul>
 		</nav>
-		<img src="./images/logo.png" alt="Woods">
+		<!-- <img src="./images/logo.png" alt="Woods"> -->
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 293.74 79.37">
+            <path d="M56.08 40.22c2.56-7.02 4.88-13.37 7.21-19.72 2.3-6.29 4.6-12.57 6.9-18.85.23.08.45.16.68.25-6.22 17.09-12.44 34.18-18.67 51.28-.29.02-.58.03-.87.05-2.46-6.36-4.93-12.72-7.38-19.08-2.43-6.33-4.84-12.67-7.51-19.66-5.27 13.33-10.3 26.04-15.32 38.75h-.91C13.54 36.1 6.87 18.99 0 1.37h10.2c4.87 12.47 9.83 25.18 15.07 38.6.68-1.36 1.12-2.1 1.43-2.89 2.76-6.95 5.42-13.94 8.28-20.85.86-2.07.76-3.86-.06-5.86-1.18-2.87-2.18-5.81-3.4-9.12h9.96c4.77 12.74 9.56 25.51 14.6 38.97ZM199.2 52.48V1.56c.42-.19.72-.45 1.02-.44 8.94.29 18-.17 26.81 1.11 12.07 1.76 19.4 11.82 19.83 24.03.6 17.24-12.73 26.72-26.9 26.37-5.81-.14-11.62.03-17.44.04-1 0-2.01-.11-3.31-.18Zm9.35-50.72v50.22c4.14 0 7.98.08 11.81-.02 5.51-.15 9.83-2.7 12.27-7.5 5.83-11.52 5.88-23.29-.07-34.74-1.38-2.66-4.18-5.07-6.91-6.46-5.27-2.67-11.16-1.59-17.09-1.51ZM100.66 53.68c-11.58-.25-20.77-4.68-25.81-15.5C67.35 22.08 77.5 3.4 95.18.59c10.41-1.65 19.64.65 27.09 8.57 12.03 12.77 7.5 34.85-8.64 41.85-4.87 2.11-7.33 2.61-12.98 2.67Zm17.1-40c-2.3-9.73-7.87-12.83-17.1-12.91C92.01.7 86.07 3.89 83.7 13.92c-2 8.44-1.8 17.05.05 25.52 1.9 8.68 7.63 13.48 15.57 13.57 10.57.12 15.88-3.48 18.2-13.07 1.07-4.41 1.22-22.18.25-26.26Zm44.84 39.98c-11.55-.31-20.7-4.77-25.71-15.62-7.47-16.15 3.04-34.99 20.81-37.52 10.25-1.46 19.29.83 26.62 8.57 12.07 12.75 7.63 34.82-8.48 41.89-4.2 1.84-8.53 3.04-13.24 2.68Zm17.27-39.98C177.57 3.95 172 .85 162.76.77c-8.6-.07-14.48 3.05-16.9 12.9-2.1 8.51-1.88 17.22-.01 25.77 1.9 8.68 7.62 13.48 15.57 13.57 10.57.12 15.88-3.48 18.2-13.07 1.07-4.41 1.22-22.18.25-26.26Zm73.68 22.59c.66 2.07 1.09 4.25 2.01 6.2 3.84 8.17 15.2 12.8 23.79 9.83 4.66-1.61 7.53-5.59 7.69-10.68.14-4.25-2.15-7.65-6.83-9.46-3.09-1.2-6.38-1.88-9.54-2.92-2.91-.96-5.91-1.81-8.62-3.19-8.89-4.51-9.77-16.62-1.59-22.39 5.93-4.19 12.56-4.49 19.35-2.41 2.7.82 5.32 1.45 8.12-1.12V13.1c-.3-.75-.64-1.27-.71-1.83C286.13 2.92 277.39.05 270.95.84c-3.92.48-7.2 1.99-8.89 5.92-1.98 4.57-.85 8.52 3.61 10.75 2.49 1.24 5.29 1.88 7.92 2.86 4.77 1.78 9.97 2.91 14.16 5.59 8.07 5.17 7.88 17.65.18 23.43-6.57 4.93-13.87 5.13-21.48 3.2-2.64-.67-5.23-1.56-7.9-2.09-1.86-.37-3.63.03-4.58 2.27-1.03-5.52-.62-11.02-.4-16.51Z"></path>
+            <path d="M44.25 67.33h3.38c.44 0 .89.04 1.34.11.45.07.86.22 1.22.45s.65.54.88.94c.23.4.34.94.34 1.6 0 .6-.18 1.12-.53 1.56s-.88.74-1.57.88v.03c.39.03.74.12 1.06.27.32.15.6.35.83.6.23.25.41.54.54.89.13.34.19.72.19 1.13 0 .67-.13 1.22-.39 1.65-.26.43-.59.76-.98 1s-.82.41-1.28.5c-.46.09-.89.13-1.28.13h-3.75V67.34Zm1.09 5.07h2.27c.56 0 1.02-.07 1.38-.21.35-.14.63-.31.83-.51.2-.2.33-.41.4-.64.07-.23.1-.43.1-.62 0-.41-.07-.75-.21-1.02a1.69 1.69 0 0 0-.56-.65c-.23-.16-.5-.27-.81-.34-.31-.07-.64-.1-.98-.1h-2.42v4.08Zm0 5.67h2.5c.64 0 1.16-.08 1.55-.23.39-.15.69-.35.9-.58.21-.23.35-.48.42-.74s.11-.49.11-.7c0-.43-.08-.8-.25-1.11s-.38-.56-.65-.75c-.27-.19-.57-.33-.9-.42-.34-.09-.68-.13-1.02-.13h-2.67v4.67Zm25.05-4.06-4.31-6.68h1.31l3.55 5.57 3.63-5.57h1.23l-4.31 6.68v5.06H70.4v-5.06Zm42.19 1.61c0 .35-.02.75-.07 1.18-.05.43-.18.84-.4 1.22-.22.38-.54.7-.96.96-.43.26-1.02.39-1.78.39-.86 0-1.54-.22-2.05-.65-.5-.44-.84-1.02-1-1.75l1.09-.2c.27 1.07.92 1.61 1.96 1.61.39 0 .72-.06.99-.19s.49-.3.65-.52c.17-.22.29-.48.36-.79.08-.3.12-.63.12-.99v-8.55h1.09v8.29Zm15.54-2.42c0-.89.15-1.72.45-2.47.3-.75.71-1.4 1.24-1.95a5.49 5.49 0 0 1 1.91-1.28c.75-.31 1.57-.46 2.46-.46s1.72.15 2.46.46c.75.31 1.38.74 1.91 1.28.53.55.94 1.2 1.24 1.95.3.75.45 1.57.45 2.47s-.15 1.72-.45 2.48c-.3.76-.71 1.41-1.24 1.96s-1.17.97-1.91 1.28c-.75.3-1.57.46-2.46.46s-1.72-.15-2.46-.46c-.75-.3-1.38-.73-1.91-1.28s-.94-1.2-1.24-1.96a6.67 6.67 0 0 1-.45-2.48Zm1.09 0c0 .73.12 1.41.35 2.04s.56 1.18.99 1.64c.43.46.95.83 1.57 1.09.61.27 1.3.4 2.06.4s1.45-.13 2.06-.4a4.61 4.61 0 0 0 1.57-1.09c.43-.46.76-1.01.99-1.64s.35-1.31.35-2.04-.12-1.41-.35-2.04-.56-1.18-.99-1.64c-.43-.46-.95-.83-1.57-1.09-.61-.26-1.3-.4-2.06-.4s-1.45.13-2.06.4c-.61.27-1.14.63-1.57 1.09-.43.46-.76 1.01-.99 1.64s-.35 1.31-.35 2.04Zm26.59-5.87h3.08c.15 0 .36 0 .63.02s.55.04.86.1c.31.06.62.14.94.27.32.12.61.3.86.53.25.23.46.53.63.88s.25.78.25 1.29c0 .56-.1 1.03-.29 1.39-.19.36-.44.66-.73.89s-.62.4-.97.51c-.35.11-.69.19-1.01.23l3.41 5.64h-1.24l-3.3-5.57h-2.04v5.57h-1.09V67.35Zm1.09 5.17h2.32c.57 0 1.04-.07 1.4-.22.36-.14.64-.32.84-.53.2-.21.33-.44.41-.68.07-.24.11-.46.11-.66s-.04-.42-.11-.66-.21-.47-.41-.68c-.2-.21-.48-.39-.84-.53s-.83-.22-1.4-.22h-2.32v4.18Zm21.69-5.17h3.63c1.02 0 1.88.12 2.59.37s1.3.57 1.77.95c.47.39.84.81 1.11 1.28.27.47.47.92.6 1.35.13.43.21.82.24 1.17s.05.59.05.74-.02.39-.05.74a5.8 5.8 0 0 1-.24 1.17c-.13.43-.33.88-.6 1.35-.27.47-.64.9-1.11 1.28-.47.39-1.06.7-1.77.95s-1.57.37-2.59.37h-3.63V67.32Zm1.09 10.74h2.25c.77 0 1.5-.1 2.17-.29.67-.19 1.26-.49 1.76-.89s.89-.9 1.18-1.52c.29-.61.43-1.34.43-2.18s-.14-1.57-.43-2.18c-.29-.61-.68-1.12-1.18-1.52-.5-.4-1.08-.69-1.76-.89-.67-.19-1.4-.29-2.17-.29h-2.25v9.75Zm27.04-4.06-4.31-6.68h1.31l3.55 5.57 3.63-5.57h1.23l-4.31 6.68v5.06h-1.09v-5.06Zm20-6.68h1.41l7.14 10.28h.03V67.33h1.09v11.73h-1.41l-7.14-10.28h-.03v10.28h-1.09V67.33Z" class="cls-1"></path>
+          </svg>
 		<form>
 			<input type="search" placeholder="search">
 			<button type="submit">search</button>
@@ -39,12 +43,18 @@
 
 	<main>
 		<section>
-			<button><img src="" alt="go back"></button>
+			<!-- <button><img src="" alt="go back"></button>
 			<button><img src="" alt="go forward"></button>
-			<button><img src="" alt="go down"></button>
-		
-			<img src="images/bucketheat.png" alt="testen">
-			<img src="images/purplebeach.png" alt="testen">
+			<button><img src="" alt="go down"></button> -->
+			<div class="slideshow">
+				<img class="slide" src="images/bucketheat.png" alt="testen">
+				<img class="slide" src="images/purplebeach.png" alt="testen">
+
+				<div class="img-nav">
+					<button class="back" onclick="plusDiv(-1)">&#10094</button>
+					<button class="forward" onclick="plusDiv(1)">&#10095</button>
+				</div>
+			</div>
 		
 			<a href="shop.html">SHOP ALL</a>
 		</section>
