--- a/shop.html
+++ b/shop.html
@@ -62,7 +62,28 @@
         </li>
 
         <li>
-            <img src="images/bucketheat.png" alt="testen">
+            <img src="images/bluedress.jpeg" alt="testen">
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
+            <button type="button">CHOOSE OPTION</button>
+        </li>
+                
+        <li>
+            <img src="images/blackdress.jpeg" alt="testen">
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
+            <button type="button">CHOOSE OPTION</button>
+        </li>
+
+        <li>
+            <img src="images/gothicdressup.jpeg" alt="testen">
+            <h3>SOLAR SHORT SLEEVE DRESS</h3>
+            <p>123,95</p>
+            <button type="button">CHOOSE OPTION</button>
+        </li>
+
+        <li>
+            <img src="images/bluedress.jpeg" alt="testen">
             <h3>SOLAR SHORT SLEEVE DRESS</h3>
             <p>123,95</p>
             <button type="button">CHOOSE OPTION</button>
