--- a/index.html
+++ b/index.html
@@ -57,31 +57,48 @@
 
 		<ul>
 			<li>
-			<img src="images/orangedress.png" alt="testen">
-			<h3>SOLAR SHORT SLEEVE DRESS 123,95</h3>
-			<button type="button">CHOOSE OPTION</button>
-		</li>
-
-		<section>
-			<img src="images/orangedressup.png" alt="testen">
-			<h3>SOLAR SHORT SLEEVE DRESS</h3>
-			<p>123,95</p>
-			<button type="button">CHOOSE OPTION</button>
-		</li>
-
-		<li>
-			<img src="images/reddress.png" alt="testen">
-			<h3>SOLAR SHORT SLEEVE DRESS</h3>
-			<p>123,95</p>
-			<button type="button">CHOOSE OPTION</button>
-		</li>
-
-		<li>
-			<img src="images/reddressup.png" alt="testen">
-			<h3>SOLAR SHORT SLEEVE DRESS</h3>
-			<p>123,95</p>
-			<button type="button">CHOOSE OPTION</button>
-		</li>
+				<img src="images/reddress.png" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+	
+	
+			<li>
+				<img src="images/reddress.png" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+	
+			<li>
+				<img src="images/colordress.jpeg" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+	
+			<li>
+				<img src="images/bluedress.jpeg" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+					
+			<li>
+				<img src="images/blackdress.jpeg" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+	
+			<li>
+				<img src="images/gothicdressup.jpeg" alt="testen">
+				<h3>SOLAR SHORT SLEEVE DRESS</h3>
+				<p>123,95</p>
+				<button type="button">CHOOSE OPTION</button>
+			</li>
+	
 
 		<li>
 			<video src="images/Video.mp4" alt="promotie video"></video>
