--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 	<main>
 		<section>
+			<h2>kun je accessible verbergen</h2>
 			<div class="slideshow">
 				<img class="slide" src="images/bucketheat.png" alt="testen">
 				<img class="slide" src="images/purplebeach.png" alt="testen">
@@ -55,57 +56,65 @@
 			<a href="shop.html">SHOP ALL</a>
 		</section>
 
-		<ul>
-			<li>
-				<img src="images/reddress.png" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-	
-	
-			<li>
-				<img src="images/reddress.png" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-	
-			<li>
-				<img src="images/colordress.jpeg" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-	
-			<li>
-				<img src="images/bluedress.jpeg" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-					
-			<li>
-				<img src="images/blackdress.jpeg" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-	
-			<li>
-				<img src="images/gothicdressup.jpeg" alt="testen">
-				<h3>SOLAR SHORT SLEEVE DRESS</h3>
-				<p>123,95</p>
-				<button type="button">CHOOSE OPTION</button>
-			</li>
-	
+		<section>
 
-		<li>
-			<video src="images/Video.mp4" alt="promotie video"></video>
-			<img src="images/logo.png" alt="logo:WOODS BY JORDYN">
+			<h2>kun je accessible</h2>
+
+			<ul>
+				<li>
+					<img src="images/reddress.png" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+		
+		
+				<li>
+					<img src="images/reddress.png" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+		
+				<li>
+					<img src="images/colordress.jpeg" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+		
+				<li>
+					<img src="images/bluedress.jpeg" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+						
+				<li>
+					<img src="images/blackdress.jpeg" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+		
+				<li>
+					<img src="images/gothicdressup.jpeg" alt="testen">
+					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<p>123,95</p>
+					<button type="button">CHOOSE OPTION</button>
+				</li>
+		
+
+			<!-- <li>
+				</li> -->
+			</ul>
+		</section>
+
+		<section>
+			<h2 aria-label="Woods by Jordyn"><img src="images/logo.png" alt=""></h2>
+			<video src="images/Video.mp4" alt="promotie video" autoplay muted loop></video>
 			<p>Woods was made to empower and built to make you feel like a masterpiece in the skin that you’re in. Every collection is designed for every body, and curated to perfection. We exist with one mission: to elevate, express, and exude confidence and individuality by providing attainable luxury garments. Through positive empowerment and body celebration, we stand as an inspiring and artistic community striving to look snatched, feel good, and embody that DFE ...Divine Feminine Energy.</p>
-		</li>
-		</ul>
+		</section>
 	</main>
 
 	<footer>
