--- a/index.html
+++ b/index.html
@@ -42,28 +42,29 @@
 
 	<main>
 		<section>
-			<h2>kun je accessible verbergen</h2>
-			<div class="slideshow">
-				<img class="slide" src="images/bucketheat.png" alt="testen">
-				<img class="slide" src="images/purplebeach.png" alt="testen">
+			<h2>new products</h2>
 
-				<div class="img-nav">
-					<button class="back" onclick="plusDiv(-1)">&#10094</button>
-					<button class="forward" onclick="plusDiv(1)">&#10095</button>
-				</div>
+			<div class="slideshow">
+				<ul>
+					<li><img class="slide" src="images/bucketheat.png" alt="testen"></li>
+					<li><img class="slide" src="images/purplebeach.png" alt="testen"></li>
+				</ul>
+
+			
+				<!-- <div class="img-nav"> -->
+					<button aria-label="prev product">&#10094</button>
+					<butto aria-label="next product">&#10095</button>
+				<!-- </div> -->
 
 			</div>
-			<a href="shop.html">SHOP ALL</a>
+
 		</section>
 
 		<section>
-
-			<h2>kun je accessible</h2>
-
 			<ul>
 				<li>
 					<img src="images/reddress.png" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
@@ -71,82 +72,75 @@
 		
 				<li>
 					<img src="images/reddress.png" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
 		
 				<li>
 					<img src="images/colordress.jpeg" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
 		
 				<li>
 					<img src="images/bluedress.jpeg" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
 						
 				<li>
 					<img src="images/blackdress.jpeg" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
 		
 				<li>
 					<img src="images/gothicdressup.jpeg" alt="testen">
-					<h3>SOLAR SHORT SLEEVE DRESS</h3>
+					<h2>SOLAR SHORT SLEEVE DRESS</h2>
 					<p>123,95</p>
 					<button type="button">CHOOSE OPTION</button>
 				</li>
-		
-
-			<!-- <li>
-				</li> -->
 			</ul>
 		</section>
+		<video src="images/Video.mp4" alt="promotie video" autoplay muted loop></video>
 
 		<section>
 			<h2 aria-label="Woods by Jordyn"><img src="images/logo.png" alt=""></h2>
-			<video src="images/Video.mp4" alt="promotie video" autoplay muted loop></video>
 			<p>Woods was made to empower and built to make you feel like a masterpiece in the skin that you’re in. Every collection is designed for every body, and curated to perfection. We exist with one mission: to elevate, express, and exude confidence and individuality by providing attainable luxury garments. Through positive empowerment and body celebration, we stand as an inspiring and artistic community striving to look snatched, feel good, and embody that DFE ...Divine Feminine Energy.</p>
 		</section>
 	</main>
 
 	<footer>
 		<section>
-			<h3>OUR STORY</h3>
+			<h3>Our story</h3>
 			<ul>
 				<li>About</li>
-				<li>STORY</li>
-				<li>CONTACT</li>
-				<li>SIZE CHART</li>
+				<li>Story</li>
+				<li>Contact</li>
+				<li>Size chart</li>
 			</ul>
 		</section>
 		
 		<section>
-			<h3>SUPPORT</h3>
+			<h3>Support</h3>
 			<ul>
-				<li>SHIPPING</li>
-				<li>PRIVACY POLICY</li>
-				<li>RETURN POLICY</li>
-				<li>TERMS OF SERVICE</li>
-				<li>ACCESSIBILITY</li>
-				<li>DO NOT SELL MY PERSONAL INFORMATION</li>
+				<li> <a href="#">Shipping</a> </li>
+				<li>Privacy policy</li>
+				<li>Retrun policy</li>
+				<li>Terms of service</li>
+				<li>Accessibility</li>
+				<li>Do not sell information</li>
 			</ul>
 		</section>
 
 		<section>
-			<h3>OUR MISSION</h3>
+			<h3>Our mission</h3>
 			<p>Our mission is to create an environment that encourages Individuality, Self Confidence, Inclusivity, with an unapologetic behavior</p>
 		</section>
-
-		<h2>2023, WOODS BY JORDYN</h2>
-	
 	</footer>
 
 	<script defer src="scripts/script.js"></script>
